--- a/index.html
+++ b/index.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=account_circle" />
     <title>Akasha Undiksha</title>
+    <style>
+      /* Styling untuk tabel */
+      table {
+          width: 100%;
+          border-collapse: collapse;
+          border: 1px solid black;
+          font-size: 15px;
+      }
+
+      /* Styling untuk header tabel */
+      th {
+          background-color: #f2f2f2;
+          padding: 10px;
+          border: 1px solid black;
+          text-align: center;
+      }
+
+      /* Styling untuk data tabel */
+      td {
+          padding: 8px;
+          background-color: transparent;
+          border: 1px solid black;
+          text-align: center;
+      }
+  </style>
   </head>
-  <body class="b">
+  <body class="font-montserrat">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
