--- a/test.html
+++ b/test.html
@@ -1,47 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kotak Utama dan Kotak Kecil</title>
+  <title>Kotak Minimum Setengah Layar</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 flex justify-center items-end min-h-screen">
-  <!-- Kotak Utama -->
-  <div id="main-box" class="w-full bg-blue-500 fixed bottom-0 max-h-screen overflow-auto">
-    <!-- Tombol -->
-    <div class="w-full flex justify-center p-4 bg-blue-600 sticky top-0">
-      <button 
-        id="add-box-button" 
-        class="bg-white text-blue-600 font-semibold py-2 px-4 rounded shadow hover:bg-blue-100">
-        Tambah Kotak Kecil
-      </button>
-    </div>
+<body class="bg-gray-100 h-screen flex items-center justify-center">
 
-    <!-- Kontainer Kotak Kecil -->
-    <div id="small-box-container" class="flex flex-col items-center p-4">
-      <!-- Kotak kecil akan ditambahkan di sini -->
-    </div>
+  <!-- Kotak Utama -->
+  <div class="bg-white min-h-36 h min-w-1/2 p-4 rounded-lg shadow-lg flex items-center justify-center">
+    <p class="text-gray-700 text-center">Kotak dengan minimum xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxtinggi setengah layar dan lebar setengah layar</p>
   </div>
 
-  <script>
-    // Ambil elemen kotak utama dan tombol
-    const mainBox = document.getElementById('main-box');
-    const smallBoxContainer = document.getElementById('small-box-container');
-    const addBoxButton = document.getElementById('add-box-button');
-
-    // Fungsi untuk menambahkan kotak kecil
-    addBoxButton.addEventListener('click', () => {
-      // Buat elemen kotak kecil
-      const smallBox = document.createElement('div');
-      smallBox.className = "bg-white w-11/12 h-16 my-2 shadow rounded";
-
-      // Tambahkan kotak kecil ke dalam kontainer
-      smallBoxContainer.appendChild(smallBox);
-
-      // Gulir ke bagian paling bawah
-      mainBox.scrollTop = mainBox.scrollHeight;
-    });
-  </script>
 </body>
 </html>
